# discord-dice-roller

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
locales/: en-US.json  en.json  fr.json
src/: main.rs
src/commands/: mod.rs  roll.rs  setlang.rs
src/commands/roller/: parser.rs  random.rs
src/events/: interaction_create.rs  message.rs  mod.rs  ready.rs
src/i18n/: language.rs  load_locale.rs  locale.rs  mod.rs
src/roller/: handler.rs  mod.rs
src/utils/: enums.rs  mod.rs
src/utils/db/: migration.rs  mod.rs  server.rs
src/utils/i18n/: load_locale.rs  locale.rs  mod.rs  supported_language.rs
src/utils/roller/: handler.rs  mod.rs  parser.rs  random.rs
