[package]
description = "A Dice Roller Discord bot written in Rust using Serenity."
repository = "https://github.com/sirnaji/discord-dice-roller.git"
keywords = ["discord", "dice roller", "d&d", "bot", "serenity"]
homepage = "https://github.com/sirnaji/discord-dice-roller"
name = "discord-dice-roller"
license = "GPL-3.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.143", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }
serde_json = "1.0.85"
colored = "2.0.0"
dotenv = "0.15.0"
regex = "1.6.0"
rand = "0.8.5"

[dependencies.serenity]
default-features = false
features = [
    "rustls_backend",
    "gateway",
    "builder",
    "chrono",
    "client",
    "cache",
    "model",
    "utils",
    "http",
]
version = "0.11.5"
